# nclint

./: LICENSE  README.md  main.py  pyproject.toml
nclint/: core.py
rules/interface/: l3_lag.py  trunk_suffix.py
rules/objects/: nonexistant_prefix_list.py  nonexistent_prefix_list.py  unused_prefix_list.py
rules/vrf/: rd_rt.py  rd_rt_invalid.py  unused_vrf.py  vrf_single_intf.py
src/nclint/: __init__.py  core.py
src/nclint/rules/interface/: l3_lag.py
src/nclint/rules/objects/: nonexistent_prefix_list.py  unused_prefix_list.py
src/nclint/rules/private/: rd_rt_invalid.py  trunk_suffix.py
src/nclint/rules/vrf/: unused_vrf.py
tests/interface/: test_l3_lag.py
tests/objects/: test_nonexistent_prefix_list.py  test_unused_prefix_list.py
tests/private/: test_rd_rt_invalid.py  test_trunk_suffix.py
tests/vrf/: test_unused_vrf.py
