[project]
name = "nclint"
version = "0.0.1"
authors = [
  { name="Dennis Israelsson", email="github@mdh.nu" },
]
description = "Network config linter library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/denngie/nclint"
Issues = "https://github.com/denngie/nclint/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
